# wavy.py

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  b_spline.py  index.py  pyproject.toml  requirements.txt  vercel.json  wavy.py
