[project]
name = "wavy-py"
version = "0.1.0"
description = "Wavy is a simple api written with python and flask which creates beautiful SVG waves. Useful for backgrounds, headers, etc."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "numpy>=1.24.4",
    "scipy>=1.10.1",
]
